--- a/requirements.txt
+++ b/requirements.txt
@@ -1,183 +1,3 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.8.0
-apturl==0.5.2
-asgiref==3.8.1
-async-timeout==4.0.3
-attrs==25.1.0
-backoff==2.2.1
-bcrypt==4.2.1
-blinker==1.4
-boto3==1.36.11
-botocore==1.36.11
-Brlapi==0.8.3
-build==1.2.2.post1
-cachetools==5.5.1
-certifi==2020.6.20
-chardet==4.0.0
-chroma-hnswlib==0.7.6
-chromadb==0.6.3
-click==8.0.3
-colorama==0.4.4
-coloredlogs==15.0.1
-command-not-found==0.3
-cryptography==3.4.8
-cupshelpers==1.0
-dataclasses-json==0.6.7
-dbus-python==1.2.18
-defer==1.0.6
-Deprecated==1.2.18
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-duplicity==0.8.21
-durationpy==0.9
-exceptiongroup==1.2.2
-fastapi==0.115.8
-fasteners==0.14.1
-filelock==3.17.0
-flatbuffers==25.1.24
-frozenlist==1.5.0
-fsspec==2024.12.0
-future==0.18.2
-google-auth==2.38.0
-googleapis-common-protos==1.66.0
-greenlet==3.1.1
-grpcio==1.70.0
-h11==0.14.0
-httpcore==1.0.7
-httplib2==0.20.2
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.28.1
-humanfriendly==10.0
-idna==3.3
-importlib_metadata==8.5.0
-importlib_resources==6.5.2
-iniconfig==2.0.0
-jeepney==0.7.1
-jmespath==1.0.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-keyring==23.5.0
-kubernetes==32.0.0
-langchain==0.3.17
-langchain-aws==0.2.12
-langchain-chroma==0.2.1
-langchain-community==0.3.16
-langchain-core==0.3.33
-langchain-ollama==0.2.3
-langchain-text-splitters==0.3.5
-langsmith==0.3.4
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-lockfile==0.12.2
-louis==3.20.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-markdown-it-py==3.0.0
-MarkupSafe==2.0.1
-marshmallow==3.26.0
-mdurl==0.1.2
-mmh3==5.1.0
-monotonic==1.6
-more-itertools==8.10.0
-mpmath==1.3.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-netifaces==0.11.0
-numpy==1.26.4
-oauthlib==3.2.2
-olefile==0.46
-ollama==0.4.7
-onnxruntime==1.20.1
-opentelemetry-api==1.29.0
-opentelemetry-exporter-otlp-proto-common==1.29.0
-opentelemetry-exporter-otlp-proto-grpc==1.29.0
-opentelemetry-instrumentation==0.50b0
-opentelemetry-instrumentation-asgi==0.50b0
-opentelemetry-instrumentation-fastapi==0.50b0
-opentelemetry-proto==1.29.0
-opentelemetry-sdk==1.29.0
-opentelemetry-semantic-conventions==0.50b0
-opentelemetry-util-http==0.50b0
-orjson==3.10.15
-overrides==7.7.0
-packaging==24.2
-paramiko==2.9.3
-pexpect==4.8.0
-Pillow==9.0.1
-pluggy==1.5.0
-posthog==3.11.0
-propcache==0.2.1
-protobuf==5.29.3
-ptyprocess==0.7.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycairo==1.20.1
-pycups==2.0.1
-pydantic==2.10.6
-pydantic-settings==2.7.1
-pydantic_core==2.27.2
-Pygments==2.19.1
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pypdf==5.2.0
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pyRFC3339==1.1
-pytest==8.3.4
-python-apt==2.4.0+ubuntu3
-python-dateutil==2.8.1
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==1.0.1
-pytz==2022.1
-pyxdg==0.27
-PyYAML==6.0.2
-reportlab==3.6.8
-requests==2.25.1
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==13.9.4
-rsa==4.9
-s3transfer==0.11.2
-SecretStorage==3.3.1
-shellingham==1.5.4
-six==1.16.0
-sniffio==1.3.1
-SQLAlchemy==2.0.37
-starlette==0.45.3
-sympy==1.13.3
-systemd-python==234
-tenacity==9.0.0
-tokenizers==0.21.0
-tomli==2.2.1
-tqdm==4.67.1
-typer==0.15.1
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-usb-creator==0.3.7
-uvicorn==0.34.0
-uvloop==0.21.0
-wadllib==1.3.6
-watchfiles==1.0.4
-websocket-client==1.8.0
-websockets==14.2
-wrapt==1.17.2
-xdg==5
-xkit==0.0.0
-yarl==1.18.3
-zipp==3.21.0
-zstandard==0.23.0
+langchain_ollama
+langchain_community
+langchain_chroma
